# dbus-easy

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: tests.yml
bench/: unmarshall.py
dbus_ezy/: __init__.py  __version__.py  auth.py  errors.py  introspection.py  message.py  message_bus.py  proxy_object.py  service.py  signature.py  validators.py
dbus_ezy/_private/: address.py  marshaller.py  unmarshaller.py  util.py
dbus_ezy/aio/: message_bus.py  proxy_object.py
dbus_ezy/glib/: message_bus.py  proxy_object.py
dbus_next/: message_bus.py
dbus_next/aio/: message_bus.py
docs/: Makefile  authentication.rst  conf.py  constants.rst  errors.rst  index.rst  introspection.rst  validators.rst
docs/high-level-client/: aio-proxy-interface.rst  aio-proxy-object.rst  base-proxy-interface.rst  base-proxy-object.rst  glib-proxy-interface.rst  glib-proxy-object.rst  index.rst
docs/high-level-service/: index.rst  service-interface.rst
docs/low-level-interface/: index.rst  message.rst
docs/message-bus/: aio-message-bus.rst  base-message-bus.rst  glib-message-bus.rst  index.rst
docs/type-system/: index.rst  signature-tree.rst  signature-type.rst  variant.rst
examples/: aio-list-names.py  aio-tcp-notification.py  dbus-next-send.py  example-service.py  glib-list-names.py  mpris.py
test/: test_address_parser.py  test_aio_low_level.py  test_big_message.py  test_disconnect.py  test_fd_passing.py  test_glib_low_level.py  test_introspection.py  test_marshaller.py  test_request_name.py  test_signature.py  test_tcp_address.py  test_validators.py  util.py
test/client/: test_methods.py  test_properties.py  test_signals.py
test/service/: test_decorators.py  test_decorators_annotated.py  test_export.py  test_methods.py  test_properties.py  test_signals.py  test_standard_interfaces.py
